Make logging, MQTT auth and debugging easier

--- a/src/config.py.example
+++ b/src/config.py.example
@@ -1,9 +1,10 @@
 # Config section
-# Uncomment these lines if your MQTT server requires authentication
-#MQTT_USER="mqtt-user"
-#MQTT_PASS="mqtt-password"
+# Fill in the next 2 lines if your MQTT server expected authentication
+MQTT_USER=""
+MQTT_PASS=""
 MQTT_HOST="mqtt.example.com"
 MQTT_PORT=1883
 MQTT_TOPIC="sensors/rtl_433"
 MQTT_QOS=0
+DEBUG=False # Change to True to log all MQTT messages
 # End config section
